# RoboMeshCat

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  publish.yml  pylint.yml  static_code_analysis.yml
docs/: human.md  smplx.md
examples/: 01_objects.py  02_robots.py  03_animation.py  04_image_and_video.py  05_teaser.py  05_teaser_with_human.py  06_human.py  06_human_model.py  visualise_robot_online.py
src/robomeshcat/: __init__.py  human.py  object.py  robot.py  scene.py
tests/: test_robot_q.py  test_urdf.urdf
