[metadata]
name = robomeshcat
version = 1.0.0
license = BSD-2-Clause
description = RoboMeshCat - Set of utilities for visualizing robots in web-based visualized MeshCat.
long_description = file: README.md
author = Vladimir Petrik
author_email = vladimir.petrik@cvut.cz
classifiers =
    Topic :: Scientific/Engineering :: Visualization
    Framework :: Robot Framework

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    meshcat-python
    trimesh
    imageio
    ffmpeg
    imageio-ffmpeg
    pinocchio

[options.packages.find]
where = src
