[metadata]
name = robomeshcat
version = 1.0.1
license = BSD-2-Clause
description = RoboMeshCat - Set of utilities for visualizing robots in web-based visualizer MeshCat.
long_description = file: README.md
author = Vladimir Petrik
author_email = vladimir.petrik@cvut.cz
classifiers =
    Topic :: Scientific/Engineering :: Visualization
    Framework :: Robot Framework

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    meshcat
    trimesh
    imageio
    imageio-ffmpeg

[options.packages.find]
where = src
